RobotDemo/JAKA/jakaAPI_2.1.2/windows/c&c++/example/SDK_C/inc/jakaAPI.h

	/**
	* @brief 设置力控的低通滤波器的值
	* @param torque_sensor_filter 低通滤波器的值,单位：Hz
	*/
	DLLEXPORT_API errno_t set_torque_sensor_filter(const JKHD *handle, const float torque_sensor_filter);
	/**
	* @brief 获取力控的低通滤波器的值
	* @param torque_sensor_filter 低通滤波器的值,单位：Hz
	*/
	DLLEXPORT_API errno_t get_torque_sensor_filter(const JKHD *handle, float *torque_sensor_filter);
	/**
	* @brief 设置力传感器的传感器限位参数配置
	* @param torque_sensor_soft_limit 力传感器的传感器限位参数
	*        力限位 fx, fy, fz 单位：N
	*        力矩限位 tx, ty, tz 单位：N*m
	*/
	DLLEXPORT_API errno_t set_torque_sensor_soft_limit(const JKHD *handle, const FTxyz torque_sensor_soft_limit);
	/**
	* @brief 获取力传感器的传感器限位参数配置
	* @param torque_sensor_soft_limit 力传感器的传感器限位参数
	*        力限位 fx, fy, fz 单位：N
	*        力矩限位 tx, ty, tz 单位：N*m
	*/
	DLLEXPORT_API errno_t get_torque_sensor_soft_limit(const JKHD *handle, FTxyz *torque_sensor_soft_limit);
	/**
	* @brief 关闭力控
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t disable_force_control(const JKHD *handle);
	/**
	* @brief 设置速度柔顺控制参数
	* @param handle  机器人控制句柄
	* @param vel_cfg为速度柔顺控制参数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_vel_compliant_ctrl(const JKHD *handle, const VelCom *vel);
	/**
	* @brief 设置柔顺控制力矩条件
	* @param handle  机器人控制句柄
	* @param ft为柔顺控制力矩条件
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_compliance_condition(const JKHD *handle, const FTxyz *ft);
	/**
	* @brief 设置网络异常，SDK与机器人控制器失去连接后多长时间机器人控制器终止机械臂当前运动
	* @param handle  机器人控制句柄
	* @param millisecond 时间参数，单位毫秒
	* @param mnt 网络异常时机器人需要进行的动作类型
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_network_exception_handle(const JKHD *handle, float millisecond, ProcessType mnt);
	/**
	* @brief 设置机器人状态数据自动更新时间间隔
	* @param handle  机器人控制句柄
	* @param millisecond 时间参数，单位毫秒
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_status_data_update_time_interval(const JKHD *handle, float millisecond);
	/**
	* @brief 设置机器人阻塞等待超时时间
	* @param seconds 时间参数，单位秒
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_block_wait_timeout(const JKHD* handle, float seconds);
	/**
	* @brief 设置导纳控制运动坐标系
	* @param ftFrame 0工具 1世界
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_ft_ctrl_frame(const JKHD *handle, const int ftFrame);
	/**
	* @brief 获取导纳控制运动坐标系
	* @param ftFrame 0工具 1世界
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_ft_ctrl_frame(const JKHD *handle, int *ftFrame);
	/**
	* @brief 获取机器人DH参数
	* @param dhParam DH参数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_dh_param(const JKHD *handle, DHParam *dhParam);
	/**
	* @brief 设置tioV3电压参数
	* @param vout_enable 电压使能，0:关，1开
	* @param vout_vol 电压大小 0:24v 1:12v
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_tio_vout_param(const JKHD* handle, int vout_enable, int vout_vol);
	/**
	* @brief 获取tioV3电压参数
	* @param vout_enable 电压使能，0:关，1开
	* @param vout_vol 电压大小 0:24v 1:12v
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_tio_vout_param(const JKHD* handle, int* vout_enable, int* vout_vol);
	/**
	* @brief 与控制器建立ftp链接
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t init_ftp_client(const JKHD *handle);
	/**
	* @brief 断开与控制器ftp链接
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t close_ftp_client(const JKHD *handle);
	/**
	* @brief 从控制器下载指定类型和名称的文件到本地
	* @param remote 控制器内部文件名绝对路径
	* @param local 下载到本地文件名绝对路径
	* @param opt 1单个文件 2文件夹
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t download_file(const JKHD *handle, char *local, char *remote, int opt);
	/**
	* @brief 从控制器上传指定类型和名称的文件到本地
	* @param remote 控制器内部文件名绝对路径
	* @param local 下载到本地文件名绝对路径
	* @param opt 1单个文件 2文件夹
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t upload_file(const JKHD *handle, char *local, char *remote, int opt);
	/**
	* @brief 从控制器删除指定类型和名称的文件
	* @param remote 控制器内部文件名
	* @param opt 1单个文件 2文件夹
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t del_ftp_file(const JKHD *handle, char *remote, int opt);
	/**
	* @brief 重命名控制器指定类型和名称的文件
	* @param remote 控制器内部文件名原名称
	* @param des 重命名的目标名
	* @param opt 1单个文件 2文件夹
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t rename_ftp_file(const JKHD *handle, char *remote, char *des, int opt);
	/**
	* @brief 获取ftp文件列表
	* @param remotedir 查询列表 
	* @param type 1单个文件 2文件夹
	* @param ret 返回字符串
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_ftp_dir(const JKHD *handle, const char *remotedir, int type, char *ret);