RobotDemo/JAKA/jakaAPI_2.1.2/windows/c#/example/sdk_CS/sdk_CS/jakaAPI.cs


		[DllImport("jakaAPI.dll", EntryPoint = "disable_force_control", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int disable_force_control(ref int i);
		[DllImport("jakaAPI.dll", EntryPoint = "set_vel_compliant_ctrl", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_vel_compliant_ctrl(ref int i, ref JKTYPE.VelCom vel);
		[DllImport("jakaAPI.dll", EntryPoint = "set_compliance_condition", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_compliance_condition(ref int i, ref JKTYPE.FTxyz ft);
		[DllImport("jakaAPI.dll", EntryPoint = "set_network_exception_handle", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_network_exception_handle(ref int i, float millisecond, JKTYPE.ProcessType mnt);
		[DllImport("jakaAPI.dll", EntryPoint = "set_status_data_update_time_interval", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_status_data_update_time_interval(ref int i, float millisecond);
		[DllImport("jakaAPI.dll", EntryPoint = "set_ft_ctrl_frame", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_ft_ctrl_frame(ref int i, int ftFrame);
		[DllImport("jakaAPI.dll", EntryPoint = "get_ft_ctrl_frame", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_ft_ctrl_frame(ref int i,ref int ftFrame);
		[DllImport("jakaAPI.dll", EntryPoint = "get_dh_param", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_ft_ctrl_frame(ref int i,ref JKTYPE.DHParam offset);
		[DllImport("jakaAPI.dll", EntryPoint = "set_tio_vout_param", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_ft_ctrl_frame(ref int i, int vout_enable,int vout_vol);
		[DllImport("jakaAPI.dll", EntryPoint = "get_tio_vout_param", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_ft_ctrl_frame(ref int i,ref int vout_enable,ref int vout_vol);
		[DllImport("jakaAPI.dll", EntryPoint = "set_block_wait_timeout", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_ft_ctrl_frame(ref int i, float seconds);
		[DllImport("jakaAPI.dll", EntryPoint = "set_torque_sensor_filter", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_torque_sensor_filter(ref int i, float torque_sensor_filter);
		[DllImport("jakaAPI.dll", EntryPoint = "get_torque_sensor_filter", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_torque_sensor_filter(ref int i, ref float torque_sensor_filter);
		[DllImport("jakaAPI.dll", EntryPoint = "set_torque_sensor_filter", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int set_torque_sensor_soft_limit(ref int i, jkType.JKTYPE.FTxyz torque_sensor_soft_limit);
		[DllImport("jakaAPI.dll", EntryPoint = "get_torque_sensor_soft_limit", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_torque_sensor_soft_limit(ref int i, ref jkType.JKTYPE.FTxyz torque_sensor_soft_limit);

		[DllImport("jakaAPI.dll", EntryPoint = "init_ftp_client", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int init_ftp_client(ref int i);
		[DllImport("jakaAPI.dll", EntryPoint = "close_ftp_client", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int close_ftp_client(ref int i);
		[DllImport("jakaAPI.dll", EntryPoint = "download_file", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int download_file(ref int i,ref char local,ref char remote, int opt);
		[DllImport("jakaAPI.dll", EntryPoint = "upload_file", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int upload_file(ref int i, ref char local, ref char remote, int opt);
		[DllImport("jakaAPI.dll", EntryPoint = "del_ftp_file", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int del_ftp_file(ref int i, ref char remote, int opt);
		[DllImport("jakaAPI.dll", EntryPoint = "rename_ftp_file", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int rename_ftp_file(ref int i, ref char remote, ref char des, int opt);
		[DllImport("jakaAPI.dll", EntryPoint = "get_ftp_dir", ExactSpelling = false, CallingConvention = CallingConvention.Cdecl)]
		public static extern int get_ftp_dir(ref int i,char[] remote, int type, StringBuilder ret );
	}
}
